[project]
name = "vehicle-efficiency-label"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastsim (>=2.1.3,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pymoo (>=0.6.1.3,<0.7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "vehicle_efficiency_label", from = "src"}]

[tool.poetry.scripts]
exp = 'vehicle_efficiency_label.experiment:run'
report = 'vehicle_efficiency_label.generate_kmpl_report:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
